build(npm): change publish config to public access

--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "email": "ajsb85@firechip.dev",
     "url": "https://ajsb85.com/"
   },
-  "homepage": "https://github.com/firechip/workflow#readme"
+  "homepage": "https://github.com/firechip/workflow#readme",
+  "publishConfig": {
+    "access": "public"
+  },
+  "private": false
 }
